--- a/src/components/LandingScreen/Covid/Covid.css
+++ b/src/components/LandingScreen/Covid/Covid.css
@@ -4,6 +4,7 @@
     justify-content: center;
     align-items: center;
     overflow-y: hidden;
+    font-family : 'NeueMontreal-Regular';
 }
 .covid-body{
     background-color: #0A0A0A;
@@ -32,7 +33,7 @@
     display: flex;
     flex-direction: row;
     align-items: center;
-    justify-content: center;
+    justify-content: flex-start;
 }
 
 #Covid__updatediv div:nth-child(1) {
@@ -49,25 +50,30 @@
 }
 
 .covid-heading{
-    font-size: 1.9rem;
-    font-weight: bold;
-    text-align: center;
+    font-size: 1.8rem;
+    text-align: flex-start;
+    font-family : 'NeueMontreal-Bold';
+    letter-spacing: 2px;
 }
 .covid-content{
     font-size: 1.05rem;
     margin-bottom:5vw;
     max-width : 40vw;
-    text-align: center;
+    font-weight: normal;
+    text-align: flex-start;
+    letter-spacing: 1px;
+    font-family : 'NeueMontreal-Light';
 }
 
 .Covid__donate-btn{
     background-color: white;
     font-weight: bold;
-    font-size: 1.1rem;
+    font-size: 1rem;
     padding : 10px 15px;
-    border-radius: 5px;
+    border-radius: 7px;
     border : none !important;
     outline:  none !important;
+    font-family : 'NeueMontreal-Regular';
 }
 .Covid__donate-btn:hover {
     box-shadow: 0px 0px 3px 1px white;
@@ -146,7 +152,6 @@
         padding : 30px 20px;
     }
     .covid-content {
-        text-align: center;
         margin : 0;
         padding : 0;
         margin-bottom: 20px;
